[css-grid] Fix static position of positioned grid items https://bugs.webkit.org/show_bug.cgi?id=172108

Reviewed by Sergio Villar Senin.

Source/WebCore:

This patch makes us follow the text on the spec
(https://drafts.csswg.org/css-grid/#static-position):
"The static position of an absolutely-positioned child
 of a grid container is determined as if it were the sole grid item
 in a grid area whose edges coincide with the padding edges
 of the grid container."

Test: fast/css-grid-layout/absolute-positioning-grid-container-parent.html

* rendering/RenderGrid.cpp:
(WebCore::RenderGrid::prepareChildForPositionedLayout): Modified to avoid
including padding to match the spec behavior.

LayoutTests:

The test is updated as the expected results were wrong.
Note that after this patch we match Chrome and Firefox behavior on this test.

* fast/css-grid-layout/absolute-positioning-grid-container-parent.html:


Canonical link: https://commits.webkit.org/189086@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@216916 268f45cc-cd09-0410-ab3c-d52691b4dbfc